Admin interface: manage meta_keys improvements
Squashed commit of the following:

commit 829b03d9b1fbdefacc11a6660b845338cfe883c4
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Tue Jun 17 12:05:02 2014 +0200

    Squashed commits:

    - ability to filter used/not used meta keys
    - not used meta key can be deleted

commit 101e8cad56b8c2bc57a0dc1046955f14bea70d3a
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Fri May 30 12:50:46 2014 +0200

    admin cannot edit the label of a metakey

--- a/app/views/app_admin/meta_keys/_form.html.haml
+++ b/app/views/app_admin/meta_keys/_form.html.haml
@@ -7,7 +7,7 @@
     .form-group
       %label.control-label.col-sm-2 Label
       .col-sm-4
-        = f.text_field :id, class: 'form-control'
+        = f.text_field :id, class: 'form-control', disabled: f.object.persisted?
 
     - unless @meta_key.persisted?
       .form-group
@@ -56,7 +56,7 @@
       .col-sm-offset-2.col-sm-4
         = button_tag "Submit", type: 'submit', class: "btn btn-success"
         - if @meta_key.persisted?
-          = link_to "Cancel", edit_app_admin_meta_key_path(@meta_key), class: "btn btn-danger"
+          = link_to "Cancel", app_admin_meta_keys_path
 
 :javascript
   $(document).ready(function(){
