ui: more enhancements for newly redesigned vocabularies
commit 7adc0dcad22015a452a5d88582f3816a8bf1c6df
Author: Max F. Albrecht <1@178.is>
Date:   Tue Jun 24 18:04:11 2014 +0200

    fix deletion modal (no double-confirmation)

commit 894640ad7cb137bb243000877d2fb3d1fb27dd95
Author: Max F. Albrecht <1@178.is>
Date:   Tue Jun 24 17:21:46 2014 +0200

    fix typo

commit ed2def593dc1908a2fc0cf27aa37f0dac872c32b
Author: Max F. Albrecht <1@178.is>
Date:   Tue Jun 24 17:21:24 2014 +0200

    sets: vocabulary: "Anzeigen" => "Vokabular anzeigen"

commit f143d437fd79b873caf39960e5c93787d95a0ae4
Author: Max F. Albrecht <1@178.is>
Date:   Tue Jun 24 17:21:01 2014 +0200

    entries: vocabulary: link titles to vocabulary pages

commit b17a994abc069e51ffc70e7727dec642ac1cc21e
Author: Max F. Albrecht <1@178.is>
Date:   Tue Jun 24 17:20:27 2014 +0200

    vocabulary: only show sorting mode of keys if possible

commit 0b9a629ced549854b42b82054ca45f150600feca
Author: Max F. Albrecht <1@178.is>
Date:   Fri Jun 20 18:23:48 2014 +0200

    delete context from set: use bootstrap-modal instead of rails-confirm

commit 9ea0cdd479f1032e48fc9f7ac0a9195b451771ff
Author: Max F. Albrecht <1@178.is>
Date:   Fri Jun 20 14:25:52 2014 +0200

    delete dialog show label if present, otherwise name

commit 14bafba3786076120bee624810efb1f2a9f3b202
Author: Max F. Albrecht <1@178.is>
Date:   Fri Jun 20 14:25:04 2014 +0200

    #cleanup

commit ffa71a55fc5e67f8cac66aa47cf96b7ac569d8d6
Author: Max F. Albrecht <1@178.is>
Date:   Fri Jun 20 12:04:51 2014 +0200

    fix term popovers

commit b095eb52b86d48bd61381080c28cc84bdd8ac74f
Author: Max F. Albrecht <1@178.is>
Date:   Thu Jun 19 16:13:43 2014 +0200

    show message when keys are empty (initially and on filter)

commit 00b28e439ed5f809114797c981c3624e5e5da8f0
Author: Max F. Albrecht <1@178.is>
Date:   Thu Jun 19 16:02:32 2014 +0200

    show the sorting mode of keys

commit 9c34bd91c3e6b4ebe811777d72c15d1a9ab740b1
Author: Max F. Albrecht <1@178.is>
D

--- a/app/views/media_entries/_contexts.html.haml
+++ b/app/views/media_entries/_contexts.html.haml
@@ -8,7 +8,9 @@
 
       .col1of4
         .ui-metadata-box.prm
-          %h3.title-l.separated.mbm= context.label
+          %h3.separated.mbm
+            %a.title-l{href: context_path(context.id)}
+              = context.label
           %dl.media-data
             - unless meta_data.blank?
               = meta_data
