--- a/app/views/media_sets/individual_contexts.html.haml
+++ b/app/views/media_sets/individual_contexts.html.haml
@@ -36,7 +36,7 @@
                   %i.icon-close
                   =_('Deaktivieren')
               - else
-                =link_to disable_context_media_set_path(@media_set, @context), method: :put, class: 'button', data: {confirm: "Soll die Zuweisung des Vokabulars \"#{@context.id}\" wirklich vom aktuellen Set entfernt werden?"} do
+                %button.button{:'data-toggle' => "modal", :'data-target' => ".modal[data-confirm-delete=\"#{@context.id}\"]"}
                   %i.icon-trash
                   =_('Entfernen')
             - else
@@ -46,10 +46,29 @@
         
           %a.button.mls{href: context_path(@context.id)}
             %i.icon-eye
-            Anzeigen
+            Vokabular anzeigen
     
     .ui-container.midtone.bordered.rounded-bottom
       = render :partial => "vocabulary/vocabulary"
 
-
 = render :partial => "media_sets/layout"
+
+-# Dialog for deletion. Triggered by 'delete' button
+.modal.hide.fade.ui-modal.narrow{:'data-confirm-delete' => @context.id, :role => "dialog", :tabindex => "-1"}
+  %form
+    .ui-modal-head
+      %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => (_"Cancel") }
+        %i.icon-close
+      %h3.title-l="Zuweisung entfernen"
+    .ui-modal-body
+      %p.pam.by-center
+        Soll die Zuweisung des Vokabulars "
+        %strong>=(@context.label || @context.name)
+        " wirklich vom aktuellen Set entfernt werden?
+    .ui-modal-footer
+      .ui-actions
+        %a.link.weak{"aria-hidden" => "true", "data-dismiss" => "modal", :class => "weak link"}=_"Cancel"
+        =link_to disable_context_media_set_path(@media_set, @context), method: :put, class: 'primary-button' do
+          %i.icon-trash
+          =("Entfernen")
+
