Admin interface: keyword list and tests thereof
Squashed commit of the following:

commit 2e9e601999325f795c2c172a72d7ee25c73c9f50
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Mon Jun 9 13:26:28 2014 +0200

    Squashed commits:

    - Admin interface: keyword list
    - tests for keyword list
    - delete searchable field and create indexes directly on the term field

--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -79,6 +79,7 @@
                 = link_to "Meta Terms", app_admin_meta_terms_path
                 = link_to "Meta Contexts", app_admin_contexts_path
                 = link_to "Meta Context Groups", app_admin_context_groups_path
+                = link_to "Keywords", app_admin_keywords_path
 
           %li.dropdown
             %a.dropdown-toggle{href: "#", data: {toggle: 'dropdown'}} 
