ui: vocabulary: fix slider/placeholder; wording
commit d191b8f3efb6b42694e873deb60dd1f808e7fbfb
Author: Max F. Albrecht <1@178.is>
Date:   Wed Jun 25 11:33:45 2014 +0200

    adjust text

commit 7753dfd9a17336e8501aa32312b895b8522992d8
Author: Max F. Albrecht <1@178.is>
Date:   Wed Jun 25 11:33:35 2014 +0200

    refactor/fix the placeholder handling

--- a/app/views/vocabulary/_terms.html.haml
+++ b/app/views/vocabulary/_terms.html.haml
@@ -23,7 +23,7 @@
             -# for each term
             %span.title-xs-alt{:'data-ui-role' => 'empty_list', 
               :'class'=> meta_key[:meta_terms].empty? ? '':'hidden'}
-              = "(Keine Begriffe)"
+              = _("Keine Begriffe")
             - meta_key[:meta_terms].each do |meta_term|
             
               %li.ui-tag-cloud-item{:'data-ui-role' => 'meta_term'}
