ui: vocabulary: slider, fix placeholder text, pedometer direction; make it filter while dragging

--- a/app/views/vocabulary/_vocabulary.html.haml
+++ b/app/views/vocabulary/_vocabulary.html.haml
@@ -21,7 +21,7 @@
       .ui-terms-filter-label-holder.left.by-center
         %span.title-s
           Häufigkeit auswerten
-          %span{:class => "ui-form-ui-ttip-toggle ui-ttip-toggle", :"data-original-title" => "Tooltip Content.", :"data-placement" => "bottom", :rel => "tooltip"}
+          %span{:class => "ui-form-ui-ttip-toggle ui-ttip-toggle", :"data-original-title" => "Die Auswertung zeigt, welche Begriffe am häufigsten vergeben wurden.", :"data-placement" => "bottom", :rel => "tooltip"}
             %i.icon-question.mid
       .ui-terms-filter-slider-holder.ptx
         .ui-slider
