ui: browse: always clip content in sidebar, fadeout right margin to white

--- a/app/assets/stylesheets/_loader.sass
+++ b/app/assets/stylesheets/_loader.sass
@@ -83,6 +83,7 @@
 @import combos/upload
 
 // Undocumented ITZ additions
+@import components/ui-body-sidebar
 @import components/ui-document-preview
 @import components/ui-export-blocks
 @import components/ui-image-zoom
