admin: Add copyrights management

--- a/app/assets/stylesheets/app_admin.css.sass
+++ b/app/assets/stylesheets/app_admin.css.sass
@@ -7,6 +7,7 @@
 @import 'app_admin/meta_keys'
 @import 'app_admin/context_groups'
 @import 'app_admin/contexts'
+@import 'app_admin/copyrights'
 
 @import 'components/ui-autocomplete'
 
