--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -39,6 +39,10 @@
                 = link_to app_admin_usage_terms_path do
                   %i.icon-cog
                   Usage terms
+              %li
+                = link_to app_admin_copyrights_path do
+                  %i.icon-cog
+                  Copyrights
           %li.dropdown
             %a.dropdown-toggle{href: "#", data: {toggle: 'dropdown'}} 
               %i.fa.fa-files-o
