Add permission presets management

--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -43,6 +43,10 @@
                 = link_to app_admin_copyrights_path do
                   %i.icon-cog
                   Copyrights
+              %li
+                = link_to app_admin_permission_presets_path do
+                  %i.icon-cog
+                  Permission presets
           %li.dropdown
             %a.dropdown-toggle{href: "#", data: {toggle: 'dropdown'}} 
               %i.fa.fa-files-o
