--- a/app/views/app_admin/contexts/index.html.haml
+++ b/app/views/app_admin/contexts/index.html.haml
@@ -18,6 +18,7 @@
       %th Position
       %th Label
       %th Description
+      %th.no-wrap Media sets
       %th
   %tbody
     = render @contexts
