--- a/app/views/app_admin/meta_keys/_form.html.haml
+++ b/app/views/app_admin/meta_keys/_form.html.haml
@@ -2,7 +2,6 @@
   = form_for [:app_admin, @meta_key], html: {class: "form-horizontal", role: "form"} do |f|
 
     = hidden_field_tag :meta_terms_positions
-    = f.hidden_field :meta_terms_alphabetical_order
 
     .form-group
       %label.control-label.col-sm-2 Label
@@ -19,10 +18,8 @@
       .form-group
         %label.control-label.col-sm-2 Terms
         .col-sm-6
-          = link_to apply_alphabetical_order_app_admin_meta_key_path(@meta_key), class: "btn btn-primary", id: "alphabetical-order", method: :post, remote: true do
-            %i.fa.fa-sort-alpha-asc
-            Apply Alphabetical Order
-          %ul#sortable.list-unstyled
+          = f.select :meta_terms_alphabetical_order, [["alphabetical order", true], ["thematic order", false]], {}, class: "form-control"
+          %ul#sortable.list-unstyled.meta-terms
             = f.fields_for :meta_terms do |ff|
               - if ff.object.new_record?
                 %li.new-term
@@ -78,33 +75,7 @@
       forcePlaceholderSize: true,
       update: function(event, ui) {
         getPositions();
-        $('#meta_key_meta_terms_alphabetical_order').val(0);
-      }
-    });
-
-    $(document).ajaxSuccess(function(event, xhr, settings) {
-      if($('#alphabetical-order').attr('href') === settings.url) {
-        var data = $.parseJSON(xhr.responseText);
-        console.log('data:', data);
-        $.each(data, function(index, id) {
-          $('#' + id).attr('data-position', index);
-        });
-
-        function compare(a, b) {
-          var aValue = $(a).data('position');
-          var bValue = $(b).data('position');
-          if(aValue < bValue) {
-            return -1;
-          }
-          if(aValue > bValue) {
-            return 1;
-          }
-          return 0;
-        }
-
-        $('#sortable li[data-position]').detach().sort(compare).prependTo('#sortable');
-        $('#meta_key_meta_terms_alphabetical_order').val(1);
-        getPositions();
+        $('#meta_key_meta_terms_alphabetical_order').val('false');
       }
     });
   });
