Admin interface: remove drag and drop interaction from meta terms related to a meta key

--- a/app/assets/stylesheets/app_admin/_meta_keys.css.sass
+++ b/app/assets/stylesheets/app_admin/_meta_keys.css.sass
@@ -3,7 +3,7 @@
   #alphabetical-order
     margin-bottom: 1em
 
-  ul#sortable li
+  ul#sortable > li
     margin-bottom: 3px
     padding: 1em
     background: #fbfbfb
@@ -11,6 +11,9 @@
       width: 9em
     input[type=text]
       width: 24em
+
+  ul.actions
+    margin-top: 1em
 
   .placeholder
     border: 2px dashed green
