Add searchable full text to media entries and media sets

--- a/app/views/app_admin/media_entries/show.html.haml
+++ b/app/views/app_admin/media_entries/show.html.haml
@@ -11,6 +11,9 @@
       - else
         %td= value
   %tr
+    %td Searchable
+    %td= @media_entry.full_text.try(:text)
+  %tr
     %td Media-File
     %td
       = link_to app_admin_media_file_path(@media_entry.media_file) do
