--- a/app/views/app_admin/media_sets/show.html.haml
+++ b/app/views/app_admin/media_sets/show.html.haml
@@ -29,7 +29,9 @@
       - when nil
       - else
         %td= value
-
+  %tr
+    %td Searchable
+    %td= @media_set.full_text.try(:text)
 
 
 - if (media_set.individual_contexts.count > 0) 
