Admin interface: rank people by date of creation

--- a/app/views/app_admin/people/_person.html.haml
+++ b/app/views/app_admin/people/_person.html.haml
@@ -21,6 +21,8 @@
 
   %td.search-rank= person.respond_to?(:search_rank) ?  person.search_rank : ''
 
+  %td= person.created_at.to_s(:long)
+
   %td
     %ul.list-inline
       %li 
