Add sorting groups by user amount

--- a/app/views/app_admin/groups/_group.html.haml
+++ b/app/views/app_admin/groups/_group.html.haml
@@ -6,8 +6,8 @@
   %td
     %span #{group.type}
 
-  %td
-    #{group.users.count}
+  %td.user_count
+    #{group.users_count}
 
   %td.search-rank= group.respond_to?(:search_rank) ?  group.search_rank : ''
 
