--- a/app/views/app_admin/groups/index.html.haml
+++ b/app/views/app_admin/groups/index.html.haml
@@ -14,6 +14,7 @@
       %label Sort (and search) by:
       %select.form-control{name: :sort_by}
         = options_for_select [["Name", :name],
+          ["Amount of users", :amount],
           ["Text search ranking",:text_rank],
           ["Trigram search ranking", :trgm_rank],
           ], @sort_by
