--- a/app/views/app_admin/meta_keys/_meta_key.html.haml
+++ b/app/views/app_admin/meta_keys/_meta_key.html.haml
@@ -10,7 +10,7 @@
   %td.limit250
     %ul
       - meta_key.contexts.each do |context|
-        %li= context.label
+        %li #{context.label} (as <strong>#{context.label_for_meta_key(meta_key)}</strong>)
   %td= meta_key.used? ? "Used" : "Not used"
   %td.no-wrap
     = link_to edit_app_admin_meta_key_path(meta_key), class: "btn btn-warning btn-xs" do
