--- a/app/views/app_admin/media_sets/edit.html.haml
+++ b/app/views/app_admin/media_sets/edit.html.haml
@@ -2,11 +2,14 @@
 
 = form_for @media_set, url: app_admin_media_set_path(@media_set) , method: "PUT", html: {class: "form-horizontal", role: "form"} do |f|
 
-  - [:id, :user_id].each do |field|
-    .form-group
-      %label.control-label.col-sm-2=  field.to_s.capitalize.split("_").join(" ")
-      .col-sm-4
-        = f.text_field field, class: "form-control"
+  .form-group
+    %label.control-label.col-sm-2 Id
+    .col-sm-4
+      = f.text_field :id, class: "form-control"
+  .form-group
+    %label.control-label.col-sm-2 User
+    .col-sm-4
+      = select_tag :user_id, options_for_select(User.all.collect{ |u| [u.name, u.id]}, @media_set.user.id)
 
   = button_tag type: 'submit', class: "btn btn-success" do
     Save
