--- a/app/views/app_admin/users/_user.html.haml
+++ b/app/views/app_admin/users/_user.html.haml
@@ -8,18 +8,17 @@
   %td.search-rank= user.respond_to?(:search_rank) ?  user.search_rank : ''
   %td
     %ul.list-inline
-
       %li
-        =link_to app_admin_user_path(user), class: "btn btn-xs" do
+        = link_to app_admin_user_path(user), class: "btn btn-xs" do
           %i.fa.fa-eye-open
           Details
-
-
       %li
         = link_to switch_to_app_admin_user_path(user), method: 'POST', class: "btn btn-xs btn-warning" do
           Switch to
-
       %li
         = link_to reset_usage_terms_app_admin_user_path(user), method: 'PUT', class: "btn btn-xs btn-warning" do
           Reset usage terms
-
+      %li
+        = link_to add_to_admins_app_admin_user_path(user), method: 'POST', class: "btn btn-xs btn-warning" do
+          %i.icon-plus
+          Add to admins
