--- a/app/views/app_admin/users/show.html.haml
+++ b/app/views/app_admin/users/show.html.haml
@@ -3,58 +3,57 @@
   #{@user}
 
 %ul.list-inline
-
   %li
     =form_tag app_admin_user_path(@user), method: 'DELETE' do
       = button_tag type: 'submit', class: "btn btn-danger" do
         %i.icon-trash
         Destroy
-
   %li
     =link_to edit_app_admin_user_path(@user), class: "btn btn-warning" do
       %i.icon-pen
       Edit
-
   %li
     = link_to switch_to_app_admin_user_path(@user), method: 'POST', class: "btn btn-warning" do
       Switch to
 
-
-
 %table.table.table-striped
   %thead
   %tbody
-  - @user.attributes.each do |name,value|
     %tr
-      %td= name.capitalize.split("_").join(" ")
-      - case name
-      - when nil
-      - else
-        %td= value
+      %td Admin?
+      %td= @user.is_admin?
 
-  %tr
-    %td # Resources
-    %td #{@user.media_resources.count}
+    - @user.attributes.each do |name,value|
+      %tr
+        %td= name.capitalize.split("_").join(" ")
+        - case name
+        - when nil
+        - else
+          %td= value
 
-  %tr
-    %td # Media Entries
-    %td #{@user.media_resources.media_entries_or_media_entry_incompletes.count}
+    %tr
+      %td # Resources
+      %td #{@user.media_resources.count}
 
-  %tr
-    %td # Media Sets
-    %td #{@user.media_resources.media_sets.count}
+    %tr
+      %td # Media Entries
+      %td #{@user.media_resources.media_entries_or_media_entry_incompletes.count}
 
-  %tr
-    %td # Filter Sets
-    %td #{@user.media_resources.filter_sets.count}
+    %tr
+      %td # Media Sets
+      %td #{@user.media_resources.media_sets.count}
 
-  %tr
-    %td # Keywords
-    %td #{@user.keywords.count}
+    %tr
+      %td # Filter Sets
+      %td #{@user.media_resources.filter_sets.count}
 
-  %tr
-    %td # MetaData
-    %td #{@user.meta_data.count}
+    %tr
+      %td # Keywords
+      %td #{@user.keywords.count}
+
+    %tr
+      %td # MetaData
+      %td #{@user.meta_data.count}
 
 
 %h2.text-center
@@ -65,4 +64,3 @@
     = render partial: 'app_admin/users/group', collection: @groups
 
 = paginate @groups, theme: 'app_admin'
-
