ui: custom_urls: new: add one more hint about url format

--- a/app/views/custom_urls/new.html.haml
+++ b/app/views/custom_urls/new.html.haml
@@ -20,6 +20,7 @@
                 Eine Adresse darf nur genau einmal im System vorkommen. <br>
                 Sie beginnt immer mit einem Kleinbuchstaben, gefolgt von (mindestens einem) weiteren Zeichen 
                 aus Kleinbuchstaben, Nummern, Bindestrichen ("<code>-</code>") und Grundstrichen ("<code>_</code>") in beliebiger Reihenfolge.
+                Sonderzeichen und Umlaute sind nicht erlaubt.
 
           .col1of2
             .ui-info-box
@@ -27,7 +28,7 @@
               %h2.title-l.ui-info-box-title Übertragen
               %p.ui-info-box-intro.prm
                 Eine bereits bestehende Adresse kann auf diesen Inhalt übertragen werden, indem er hier eingeben wird. <br>
-                Dazu müssen Sie für beide Inhalte über die Zugriffsberechtigung "Verwalten" verfügen!                
+                Dazu müssen Sie für beide Inhalte über die Zugriffsberechtigung "Verwalten" verfügen!
 
         %hr.separator.light.mvs
       
