--- a/app/views/media_entries/_contexts.html.haml
+++ b/app/views/media_entries/_contexts.html.haml
@@ -8,9 +8,13 @@
 
       .col1of4
         .ui-metadata-box.prm
-          %h3.separated.mbm
-            %a.title-l{href: context_path(context.id)}
+          %h3.separated.mbm.title-l
+            -# link the context titles, only if they are individual contexts
+            - if @main_context_group.contexts.include?(context)
               = context.label
+            - else
+              %a.title-l{href: context_path(context.id)}
+                = context.label
           %dl.media-data
             - unless meta_data.blank?
               = meta_data
