Admin interface: searching for media entries

--- a/app/assets/stylesheets/app_admin.css.sass
+++ b/app/assets/stylesheets/app_admin.css.sass
@@ -20,11 +20,15 @@
   white-space: nowrap
 
 form.settings
-  input[type='text'], textarea
+  input[type=text], textarea
     width: 80%
 
   textarea
     height: 200px
+
+form.media-entry-search-form
+  input[type=text]
+    width: 350px
   
 span.limit250
   @include limit(250px)
