--- a/app/views/app_admin/groups/index.html.haml
+++ b/app/views/app_admin/groups/index.html.haml
@@ -8,7 +8,7 @@
 
     .form-group
       = text_field :filter, :search_terms, class: "search-query, form-control", 
-          placeholder: 'Search term',  value: params.try(:[],:filter).try(:[],:search_terms)
+          placeholder: 'Search term', value: @search_terms
 
     .form-group
       %label Sort (and search) by:
