--- a/app/assets/javascripts/views/import/upload/dropbox_infos.tmpl.haml
+++ b/app/assets/javascripts/views/import/upload/dropbox_infos.tmpl.haml
@@ -16,3 +16,6 @@
       %tr
         %td.col1of2 Verzeichnis bzw. Pfad
         %td.col1of2 ${dir_name}
+      %tr
+        %td.col1of2 Direkter Link
+        %td.col1of2 <a href="ftp://${login}:${password}@${server}/${dir_name}/">FTP-Client öffnen</a>
