Admin interface: context improvements
Squashed commit of the following:

commit 30d2e50026544bdb52873387ab2a729a9998dd56
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Fri Aug 8 10:18:37 2014 +0200

    Admin interface: show context's related media sets on a separate page

commit eb9ea2d9bfecc15f77048db61365ca306699e0e7
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Fri Aug 8 11:54:08 2014 +0200

    Admin interface: ability to edit contexts's description

--- a/app/views/app_admin/contexts/_form.html.haml
+++ b/app/views/app_admin/contexts/_form.html.haml
@@ -11,6 +11,11 @@
       .col-sm-4
         = f.select :context_group_id, ContextGroup.all.collect { |mcg| [ mcg.name, mcg.id ] }, {include_blank: true}, { class: "form-control" }
 
+    .form-group
+      %label.control-label.col-sm-2 Description
+      .col-sm-4
+        = f.text_area :description, rows: 6, class: "form-control"
+
     - if f.object.persisted?
       %h3 Meta Key Definitions
       = link_to new_app_admin_context_meta_key_definition_path(@context), class: "btn btn-success" do
